--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -3,45 +3,49 @@
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-  }
-  
-  .login-container {
+}
+
+.login-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-  }
-  
-  .login-form {
-    background: #fff;
+    height: auto;
+    padding: 20px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    background-color: #f9f9f9;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    border: 1px solid #ccc;
     text-align: center;
-  }
-  
-  .login-form h2 {
+    width: 300px;
+}
+
+.login-form h2 {
     margin-bottom: 20px;
-  }
-  
-  .login-form label {
+    text-align: center;
+}
+
+.login-form label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-  }
-  
-  .login-form input[type="email"],
-  .login-form input[type="password"] {
+}
+
+.login-form input[type="email"],
+.login-form input[type="password"],
+.login-form input[type="text"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-  
-  .login-form input[type="submit"] {
+}
+
+.login-form input[type="submit"] {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -50,25 +54,59 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-  }
-  
-  .login-form input[type="submit"]:hover {
+}
+
+.login-form input[type="submit"]:hover {
     background-color: #0056b3;
-  }
-  
-  .login-links {
+}
+
+.show-password {
+    display: flex;
+    align-items: self-start;
+    margin-bottom: 20px;
+}
+
+.show-password input[type="checkbox"] {
+    margin-right: 5px;
+    margin-top: 1.5px;
+}
+
+.show-password label {
+    text-align: center;
+    font-weight: lighter;
+    font-size: smaller;
+}
+
+.login-links {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
-  }
-  
-  .login-links a {
+    margin-top: 30px;
+}
+
+.login-links a {
     color: #007bff;
     text-decoration: none;
     transition: color 0.3s;
-  }
-  
-  .login-links a:hover {
+    font-size: smaller;
+}
+
+.login-links a:hover {
     color: #0056b3;
-  }
-  
+}
+
+@media (max-width: 600px) {
+    .login-form {
+        width: 90%;
+        padding: 15px;
+        max-width: none;
+    }
+
+    .login-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .login-links a {
+        margin-bottom: 10px;
+    }
+}
