--- a/src/components/common/NavBar.css
+++ b/src/components/common/NavBar.css
@@ -22,7 +22,6 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    max-width: 1500px;
     padding: 0 50px;
   }
   
@@ -57,12 +56,12 @@
   }
   
   .auth-button:hover {
-    color: #000000; /* Change to the desired hover color */
+    color: #000000; 
   }
 
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 600px) {
     .navbar {
-      background: rgb(208, 208, 240); /* Radium-like gradient */
+      background: rgb(208, 208, 240); 
       height: 60px;
       display: flex;
       justify-content: center;
@@ -72,10 +71,12 @@
       font-size: 1.2rem;
     }
 
-    .navbar-logo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
+    .navbar-contents {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      padding: 0 50px;
     }
 }
