added homepage and authentication flow

--- a/src/components/auth/ForgotPassword.css
+++ b/src/components/auth/ForgotPassword.css
@@ -5,7 +5,7 @@
     font-family: 'Arial', sans-serif;
   }
   
-  .validate-container {
+  .forgot-password-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
     padding: 20px;
   }
   
-  .validate-form {
+  .forgot-password-form {
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -24,63 +24,57 @@
     text-align: center;
   }
   
-  .validate-form h2 {
+  .forgot-password-form h2 {
     margin-bottom: 20px;
     text-align: center;
   }
   
-.validate-form p {
-    font-size: small;
-    font-weight: 200;
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #007bff;
-}
-  .validate-form label {
-    margin-top: 30px;
+  .forgot-password-form label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
   }
   
-  .validate-form input[type="text"] {
+  .forgot-password-form input[type="email"],
+  .forgot-password-form input[type="password"],
+  .forgot-password-form input[type="text"] {
+    width: 100%;
     margin-bottom: 20px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 100%;
   }
   
-  .validate-form input[type="submit"] {
+  .forgot-password-form input[type="submit"] {
     padding: 10px;
     background-color: #4CAF50;
     color: white;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
     cursor: pointer;
-    width: 100%;
     transition: background-color 0.3s;
+    width: 100%;
   }
   
-  .validate-form input[type="submit"]:hover {
+  .forgot-password-form input[type="submit"]:hover {
     background-color: #45a049;
   }
   
-  .validate-links {
+  .show-password-reset {
     display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
+    align-items: self-start;
+    margin-bottom: 20px;
   }
   
-  .validate-links a {
-    color: #007bff;
-    text-decoration: none;
-    transition: color 0.3s;
+  .show-password-reset input[type="checkbox"] {
+    margin-right: 5px;
+    margin-top: 1.5px;
+  }
+  
+  .show-password-reset label {
+    text-align: center;
+    font-weight: lighter;
     font-size: smaller;
-  }
-  
-  .validate-links a:hover {
-    color: #0056b3;
   }
   
   .error-message {
@@ -93,18 +87,10 @@
   }
   
   @media (max-width: 600px) {
-    .validate-form {
+    .forgot-password-form {
       width: 90%;
       padding: 15px;
       max-width: none;
     }
-  
-    .validate-links {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .validate-links a {
-      margin-bottom: 10px;
-    }
   }
+  
