--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -1,118 +1,121 @@
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-  } */
-  
-  .register-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    padding: 20px;
-  }
-  
-  .register-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    text-align: center;
-  }
-  
-  .register-form h2 {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .register-form label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-  }
-  
-  .register-form input[type="email"],
-  .register-form input[type="password"]
-  .register-form input[type="text"] {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .register-form input[type="submit"] {
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100%;
-  }
-  
-  .register-form input[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+.register-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  padding: 20px;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+
+.register-form h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.register-form label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.register-form input[type="email"],
+.register-form input[type="password"],
+.register-form input[type="text"] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.register-form input[type="submit"] {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%;
+}
+
+.register-form input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
 .show-password-register {
-    display: flex;
-    align-items: self-start;
-    margin-bottom: 20px;
+  display: flex;
+  align-items: self-start;
+  margin-bottom: 20px;
 }
 
 .show-password-register input[type="checkbox"] {
-    margin-right: 5px;
-    margin-top: 1.5px;
+  margin-right: 5px;
+  margin-top: 1.5px;
 }
 
 .show-password-register label {
-    text-align: center;
-    font-weight: lighter;
-    font-size: smaller;
+  text-align: center;
+  font-weight: lighter;
+  font-size: smaller;
 }
 
 .register-links {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.register-links a {
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s;
+  font-size: smaller;
+}
+
+.register-links a:hover {
+  color: #0056b3;
+}
+
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: smaller;
+  font-weight: 300;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+@media (max-width: 600px) {
+  .register-form {
+    width: 90%;
+    padding: 15px;
+    max-width: none;
   }
-  
+
+  .register-links {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .register-links a {
-    color: #007bff;
-    text-decoration: none;
-    transition: color 0.3s;
-    font-size: smaller;
-  }
-  
-  .register-links a:hover {
-    color: #0056b3;
-  }
-  
-  .error-message {
-    color: red;
     margin-bottom: 10px;
-    text-align: center;
   }
-  
-  @media (max-width: 600px) {
-    .register-form {
-      width: 90%;
-      padding: 15px;
-      max-width: none;
-    }
-  
-    .register-links {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .register-links a {
-      margin-bottom: 10px;
-    }
-  }
+}
